--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,16 +2,13 @@
   font-size: 4rem;
 }
 
-input {
-  background-color: #333;
-  padding: 1.2rem 3rem;
-  text-align: center;
-  font-size: 2.2rem;
-  
-  border-radius: .5rem;
+.btn-primary {
+  font-size: 4rem;
+  padding: 0 2rem;
+  background-color: black;
+  border: none;
   outline: none;
-  border: 1px solid #eee;
-  color: white;
+  cursor: pointer;
 }
 
 .login {
@@ -31,6 +28,8 @@ input {
 
   &__input {
     flex: 1;
+    text-align: center;
+    font-size: 2.2rem;
 
     &--error {
       flex: 1;
@@ -53,3 +52,78 @@ input {
     font-size: 1.7rem;
   }
 }
+
+.chat {
+  height: 99vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5rem 10rem 0 10rem;
+
+  .chat-header {
+    margin-bottom: 3rem;
+  }
+
+  .chat-form {
+    display: flex;
+    bottom: 0;
+    width: 100%;
+    margin-top: 3rem;
+
+    &__input {
+      flex: 1;
+      text-align: left;
+    }
+  
+    &__btn {
+      font-size: 4rem;
+      padding: 0 2rem;
+      background-color: black;
+      border: none;
+      outline: none;
+      cursor: pointer;
+    }
+  }
+
+  .chat-box {
+    flex: 1;
+  }
+  
+  .chat-message {
+    padding: 1rem;
+    margin: 1rem 0;
+    display: flex;
+    background-color: #333;
+    border-radius: 5px;
+    border: 1px solid #5f5f5f;
+    max-width: 60%;
+  
+    &__avt {
+      border-radius: 50%;
+      margin-right: 2rem;
+      height: 4rem;
+    }
+  
+    &__main {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+  
+    &__info {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      color: #eee;
+    }
+    &__time {
+      font-style: italic;
+    }
+  
+    &__text {
+      font-size: 1.2rem;
+    }
+  }
+}
+
