--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,5 @@
+@import '~react-perfect-scrollbar/dist/css/styles.css';
+
 // COLORS
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
@@ -76,4 +78,13 @@ input {
   font-family: 'Poppins', BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+
+  background-color: #333;
+  padding: 1.2rem 3rem;
+  font-size: 1.5rem;
+  
+  border-radius: .5rem;
+  outline: none;
+  border: 1px solid #5f5f5f;
+  color: white;
 }
