feat: styling chat message

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -89,6 +89,11 @@
     flex: 1;
   }
   
+  .chat-message-wrapper {
+    display: inline-block;
+    min-width: 30%;
+  }
+
   .chat-message {
     padding: 1rem;
     margin: 1rem 0;
@@ -96,7 +101,6 @@
     background-color: #333;
     border-radius: 5px;
     border: 1px solid #5f5f5f;
-    max-width: 60%;
   
     &__avt {
       border-radius: 50%;
