--- a/frontend/src/components/ChatForm/ChatForm.module.scss
+++ b/frontend/src/components/ChatForm/ChatForm.module.scss
@@ -9,7 +9,7 @@
 
 .Button {
   font-size: 4rem;
-  padding: 0 2rem;
+  padding-left: 1rem;
   background-color: black;
   border: none;
   outline: none;
