--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -87,3 +87,16 @@ input {
   border: 1px solid #5f5f5f;
   color: white;
 }
+
+.header-primary {
+  font-size: 4rem;
+}
+
+.btn-primary {
+  font-size: 4rem;
+  padding: 0 2rem;
+  background-color: black;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
