--- a/frontend/src/components/Message/Message.module.scss
+++ b/frontend/src/components/Message/Message.module.scss
@@ -1,7 +1,7 @@
 .Wrapper {
   display: inline-block;
   min-width: 30%;
-  max-width: 70%;
+  max-width: 80%;
 }
 
 .Message {
@@ -21,18 +21,12 @@
   flex: 1
 }
 
-.Meta {
-  display: flex;
-  justify-content: space-between;
-  color: #eee;
-}
-
 .Text {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
   font-size: 1.2rem;
 }
 
-.Avatar {
-  border-radius: 50%;
-  height: 4rem;
+.Time {
+  font-style: italic;
+  align-self: flex-end;
 }
