feat: update styling

--- a/frontend/src/components/ChatBox/ChatBox.module.scss
+++ b/frontend/src/components/ChatBox/ChatBox.module.scss
@@ -1,3 +1,12 @@
 .ChatBox {
   padding-right: 3rem;
 }
+
+.ScrollContainer {
+  width: 100%;
+}
+
+.Self {
+  display: flex;
+  justify-content: flex-end;
+}
