--- a/frontend/src/components/Message/Message.module.scss
+++ b/frontend/src/components/Message/Message.module.scss
@@ -6,7 +6,7 @@
 
 .Message {
   padding: 1rem;
-  margin: 1rem 0;
+  margin-bottom: 2rem;
   display: flex;
   background-color: #333;
   border-radius: 3px;
