feat: filter message to correct room

--- a/frontend/src/pages/AdminChatPage/AdminChatPage.module.scss
+++ b/frontend/src/pages/AdminChatPage/AdminChatPage.module.scss
@@ -45,3 +45,11 @@
   margin-bottom: 2rem;
   grid-area: form;
 }
+
+.Container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
