feat: add responsive for mobile chat page

--- a/frontend/src/pages/ChatPage/ChatPage.module.scss
+++ b/frontend/src/pages/ChatPage/ChatPage.module.scss
@@ -5,6 +5,10 @@
   height: 100vh;
 
   padding: 5rem 5rem 0 5rem;
+
+  @media only screen and (max-width: 37.5em) {
+    padding: 5rem 2rem 0 2rem;
+  }
 }
 
 .Header {
