--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -86,10 +86,18 @@ input {
   outline: none;
   border: 1px solid #5f5f5f;
   color: white;
+
+  @media only screen and (max-width: 37.5em) {
+    padding: 1.2rem 1.5rem;
+  }
 }
 
 .header-primary {
   font-size: 4rem;
+
+  @media only screen and (max-width: 37.5em) {
+    font-size: 3rem;
+  }
 }
 
 .btn-primary {
