--- a/frontend/src/pages/LoginPage/LoginPage.module.scss
+++ b/frontend/src/pages/LoginPage/LoginPage.module.scss
@@ -22,7 +22,11 @@
 .Input {
   flex: 1;
   text-align: center;
-  font-size: 2rem; 
+  font-size: 2rem;
+
+  @media only screen and (max-width: 37.5em) { 
+    font-size: 1.4rem;
+  };
 }
 
 .InputError {
